fix: shorten sidebar metrics labels and rename product to Fortress
- Changed 'Total Decoys' to 'Decoys' and 'Your Chats' to 'Chats' to prevent text truncation in sidebar
- Updated English product name from 'Confuser' to 'Fortress'

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,6 +1,6 @@
 {
   "app": {
-    "name": "Confuser",
+    "name": "Fortress",
     "tagline": "Privacy-First Chat",
     "description": "Your conversations, protected by intelligent privacy layers"
   },
